Updated version for missing files in WP repo

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+= 1.2.3: - 2020-09-25 =
+
+* Fixed. 
+- Added missing files.
+
 = 1.2.0: - 2020-09-24 =
 
 * Re-wrote plugin in OOP architecture using the WordPress Plugin Boilerplate. 
